# fambanasi-docs-engine-api

./: .env.example  .gitignore  .ruff.toml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest_output.txt
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 2026_02_18_1015-2ab1e19d40a7_init_schema.py
app/: main.py
app/api/: dependencies.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  documents.py  drafts.py  media.py  metadata.py  navigation.py  search.py  users.py  webhooks.py
app/core/: config.py  exceptions.py  logging.py  security.py
app/db/: base.py  session.py
app/db/models/: __init__.py  audit_log.py  draft.py  metadata.py  user.py
app/docs/: feature8.md
app/middleware/: __init__.py  auth_middleware.py  error_handler.py  rate_limit.py
app/schemas/: __init__.py  auth.py  common.py  document.py  draft.py  metadata.py  navigation.py  webhook.py
app/services/: __init__.py  audit_service.py  document_service.py  draft_service.py  github_service.py  media_service.py  metadata_service.py  navigation_service.py  supabase_service.py
app/utils/: __init__.py  commit_messages.py  file_helpers.py  markdown.py  validators.py
docs/: full-api-surface.md
scripts/: init_db.py
tests/: __init__.py  conftest.py
tests/integration/: test_documents_api.py  test_drafts_api.py
tests/unit/: test_commit_message.py  test_markdown.py  test_validators.py
