[tool.poetry]
name = "fambanasi-docs-engine-api"
version = "1.0.0"
description = "FastAPI backend for Git-Sync Documentation Engine - handles CMS operations and GitHub integration"
authors = ["David Karanja <karanjadavid614@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.14"
fastapi = "^0.129.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = "^2.12.5"
sqlalchemy = "^2.0.46"
alembic = "^1.18.4"
supabase = "^2.28.0"
pygithub = "^2.8.1"
asyncpg = "^0.31.0"
pydantic-settings = "^2.12.0"
python-multipart = "^0.0.22"
httpx = "^0.28.1"
python-slugify = "^8.0.4"
markdown = "^3.10.2"
pyyaml = "^6.0.3"
python-frontmatter = "^1.1.0"
pillow = "^12.1.1"
aiofiles = "^25.1.0"
redis = "^7.1.1"
tenacity = "^9.1.4"
email-validator = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.0"
httpx = "^0.28.1"
faker = "^40.4.0"
ruff = "^0.15.1"
black = "^26.1.0"
mypy = "^1.19.1"
pre-commit = "^4.5.1"

[tool.ruff]
target-version = "py314"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 100
target-version = ['py314']
include = '\.pyi?$'

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=app --cov-report=term-missing --cov-report=html"

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

